--- a/package.json
+++ b/package.json
@@ -5,7 +5,24 @@
   "main": "index.js",
   "author": "Lau Zhihao",
   "license": "MIT",
+  "scripts": {
+    "dev": "gulp",
+    "test": "mocha --require babel-register"
+  },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "gulp": "^3.9.1",
+    "gulp-mocha": "^4.3.1",
+    "gulp-util": "^3.0.8",
+    "mocha": "^4.0.1",
+    "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2",
     "user": "0.0.0"
   }
 }
